# win-remember-me

./: .gitignore  AGENTS.md  CODEOWNERS  LICENSE  README.md  baseline.json  config.json  gui_app.py  gui_app_v2.py  layout.json  my_layout.json  requirements.txt  setup.cfg  testbench.py  window_layout.py
layouts/: Default.json  layout.json  layout1.json  layout2.json  layouts.json
offline_bundle/: README_OFFLINE.md
offline_bundle/scripts/: install_offline.cmd  install_offline.ps1  install_offline.sh  offline-install.cmd
scripts/: build_offline_bundle.cmd  build_offline_bundle.ps1  build_offline_bundle.py  build_offline_bundle.sh  dev.cmd  dev.ps1  dev.sh  install_offline.cmd  install_offline.ps1  install_offline.sh  offline-install.ps1  offline-install.zsh
tests/: test_build_offline_bundle.py  test_gui_app.py  test_schema.py  test_window_layout.py
window_layout_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
