[metadata]
name = window-layout-cli
version = 0.1.0
description = Windows window layout capture/restore CLI for fast session state management
long_description = file: README.md
long_description_content_type = text/markdown
author = TSD
license = MIT
platforms = Windows

[options]
py_modules = window_layout
python_requires = >=3.9
install_requires =
    psutil
    pywin32

[options.entry_points]
console_scripts =
    window-layout = window_layout:main

